stop overflow

--- a/src/stories/header.css
+++ b/src/stories/header.css
@@ -1,4 +1,4 @@
-.wrapper {
+.stories .wrapper {
   font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   padding: 15px 20px;
@@ -7,12 +7,12 @@
   justify-content: space-between;
 }
 
-svg {
+.stories svg {
   display: inline-block;
   vertical-align: top;
 }
 
-h1 {
+.stories h1 {
   font-weight: 900;
   font-size: 20px;
   line-height: 1;
@@ -21,6 +21,6 @@ h1 {
   vertical-align: top;
 }
 
-button + button {
+.stories button + button {
   margin-left: 10px;
 }
